#706: Added Allocation Priority queries