@@ -18,19 +18,16 @@ package com.echothree.control.user.inventory.server.command;
 
 import com.echothree.control.user.inventory.common.form.GetInventoryConditionForm;
 import com.echothree.control.user.inventory.common.result.InventoryResultFactory;
-import com.echothree.control.user.inventory.common.result.GetInventoryConditionResult;
+import com.echothree.model.control.core.common.EventTypes;
 import com.echothree.model.control.inventory.server.control.InventoryControl;
 import com.echothree.model.control.inventory.server.logic.InventoryConditionLogic;
-import com.echothree.model.control.core.common.EventTypes;
 import com.echothree.model.data.inventory.server.entity.InventoryCondition;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.server.control.BaseSingleEntityCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class GetInventoryConditionCommand
@@ -40,13 +37,13 @@ public class GetInventoryConditionCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("InventoryConditionName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("EntityRef", FieldType.ENTITY_REF, false, null, null),
                 new FieldDefinition("Key", FieldType.KEY, false, null, null),
                 new FieldDefinition("Guid", FieldType.GUID, false, null, null),
                 new FieldDefinition("Ulid", FieldType.ULID, false, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of GetInventoryConditionCommand */
@@ -56,22 +53,22 @@ public class GetInventoryConditionCommand
     
     @Override
     protected InventoryCondition getEntity() {
-        var inventoryCondition = InventoryConditionLogic.getInstance().getInventoryConditionByUniversalSpec(this, form, true);
+        var entity = InventoryConditionLogic.getInstance().getInventoryConditionByUniversalSpec(this, form, true);
 
-        if(inventoryCondition != null) {
-            sendEvent(inventoryCondition.getPrimaryKey(), EventTypes.READ, null, null, getPartyPK());
+        if(entity != null) {
+            sendEvent(entity.getPrimaryKey(), EventTypes.READ, null, null, getPartyPK());
         }
 
-        return inventoryCondition;
+        return entity;
     }
     
     @Override
-    protected BaseResult getTransfer(InventoryCondition inventoryCondition) {
+    protected BaseResult getTransfer(InventoryCondition entity) {
         var inventoryControl = Session.getModelController(InventoryControl.class);
         var result = InventoryResultFactory.getGetInventoryConditionResult();
 
-        if(inventoryCondition != null) {
-            result.setInventoryCondition(inventoryControl.getInventoryConditionTransfer(getUserVisit(), inventoryCondition));
+        if(entity != null) {
+            result.setInventoryCondition(inventoryControl.getInventoryConditionTransfer(getUserVisit(), entity));
         }
 
         return result;
